cambio en el titulo

--- a/public/index.html
+++ b/public/index.html
@@ -14,11 +14,11 @@
 
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-  <title>React App</title>
+  <title>Lista de tareas</title>
 </head>
 
 <body>
-  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <noscript>IMPORTANTE!!! Debes habilitar javascript o usar otro navegador para poder usar esta aplicación</noscript>
   <div id="root"></div>
 </body>
 
